crates/ars-components/src/input/switch/snapshots/ars_components__input__switch__tests__switch_hidden_input_on.snap
---
source: crates/ars-components/src/input/switch/mod.rs
expression: "snapshot_attrs(&service.connect(&|_| {}).hidden_input_attrs())"
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "hidden-input",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "switch",
            ),
        ),
        (
            Aria(
                Hidden,
            ),
            String(
                "true",
            ),
        ),
        (
            Id,
            String(
                "wifi-hidden-input",
            ),
        ),
        (
            TabIndex,
            String(
                "-1",
            ),
        ),
        (
            Checked,
            Bool(
                true,
            ),
        ),
        (
            Form,
            String(
                "settings",
            ),
        ),
        (
            Name,
            String(
                "wifi_enabled",
            ),
        ),
        (
            Type,
            String(
                "checkbox",
            ),
        ),
        (
            Value,
            String(
                "enabled",
            ),
        ),
    ],
    styles: [],
}
