crates/ars-components/src/input/switch/snapshots/ars_components__input__switch__tests__switch_label_default.snap
---
source: crates/ars-components/src/input/switch/mod.rs
expression: "snapshot_attrs(&service.connect(&|_| {}).label_attrs())"
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "label",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "switch",
            ),
        ),
        (
            Id,
            String(
                "wifi-label",
            ),
        ),
        (
            For,
            String(
                "wifi-hidden-input",
            ),
        ),
    ],
    styles: [],
}
